api26以下加解密出错优化